Fix button & paragraph spacing

--- a/frontend/src/scss/tailwind.scss
+++ b/frontend/src/scss/tailwind.scss
@@ -75,3 +75,8 @@
 .uppercase {
   text-transform: uppercase;
 }
+
+p.prose,
+.prose p {
+  margin-bottom: 1rem;
+}
